--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@grammyjs/hydrate": "^1.3.1",
     "@grammyjs/parse-mode": "^1.6.0",
     "@grammyjs/runner": "^2.0.2",
+    "@waylaidwanderer/chatgpt-api": "^1.31.6",
     "dotenv": "^16.0.3",
-    "grammy": "^1.15.3",
-    "openai": "^3.2.1"
+    "grammy": "^1.15.3"
   },
   "type": "module"
 }
